--- a/repeticao/com-repeticao.html
+++ b/repeticao/com-repeticao.html
@@ -6,8 +6,7 @@
         var nome = prompt("Seu nome: ");
         var nota = prompt("Sua Nota: ");
 
-        document.write("Nome: " + nome + "Nota: " + nota);
-        document.write("<br>");
+        document.write("Nome: " + nome + "Nota: " + nota + "<br>");
     }
 
 </script>
